sandc/test/fixtures/pbtRegression/shouldFail/privPackageItem/Source.sand
pub class Source {

}

class Priv {
    
}